--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/theme-toggles@4.10.1/css/inner-moon.min.css">
     <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/assets/favicons/favicon-16x16.png">
+    <link rel="manifest" href="{{ site.baseurl }}/assets/favicons/site.webmanifest">
     {% feed_meta %}
     {% seo %}
   </head>
@@ -36,6 +36,6 @@
   </body>
 
   <!-- Scripts -->
-  <script src="/assets/js/theme-switch.js"></script>
-  <script src="/assets/js/animations.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/theme-switch.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/animations.js"></script>
 </html>
