--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,5 +14,5 @@ layout: default
     </li>
   {% endfor %}
 </ul>
-<a href="/blog/">Voir tous les posts</a>
+<a href="{{ site.baseurl }}/blog/">Voir tous les posts</a>
 
