--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
 <ul>
   {% for post in site.posts limit:5 %}
     <li>
-      <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+      <h3><a href="{{ post.url | absolute_url }}">{{ post.title }}</a></h3>
     </li>
   {% endfor %}
 </ul>
